# so2-project

./: Makefile  README.md  main.cpp
1/: CMakeLists.txt
2/: Makefile  README.md  tcp_client.cpp  tcp_server.cpp
scripts/: build.sh
